Oddjob-1.7.0
============

* Oddjob 1.7 requires Java 11.

* Please Note: This release is not serialisation compatible with 
Oddjob 1.6. All persisted job state will need to be deleted before upgrading.

Changes in 1.7.0
----------------

- Conversions to Instant.
- Move Javdoc Doclet and Taglet to new Java 9 API.

Outstanding
-----------
- Support generic conversions.
- Enhance the Web interface for cut and paste etc.
- Add Undo functionality to Oddjob configuration.
- Redo build to remove Ant/Ivy.
- Document conversions. Possibly include conversions in the Reference.

Deferred to A Later Version
---------------------------

Changes in 1.6.0
----------------
- Mail Job now supports ssl and password authentication.
- A service where the @Start method return a CompleteableFuture is wrapped as an asynchronous service.
- A Callable that returns a CompletableFuture is wrapped as an asynchronous job.
- Support a Job annotation so any method can be a job.
- Add SSL to web server and client.
- Value properties no longer get set to null on destroy. This is so we can use
  beans from Jetty directly in the configuration.
- Started a React JS UI replacing some parts of the existing JQuery one. Implemented drag and drop within
  the tree component, and some ability to change configuration. This is only half finished and is very
  much a work in progress.
- Fixed problems with PropertiesJob after deserialization.
- Reworked Beanbus to be much easier to extend.
- Add reflection conversion providers.
- Added SSH Tasks.
- Added AWS Tasks. (No long in the main distribution, only on GitHub)
- Added a servlet/websocket thick client.
- Added a design form declaration for arooa descriptors.
- Added support for JSON Configuration.
- Moved Tests to JUnit 4.
- Upgraded oj-ant to Ant 1.10.7
- Migrated Logging to SLF4J
- Migrated from Log4j to Logback as the default logging framework. (Log4j is still supported)
- Add experimental feature of a state expression using ANTLR.